<resources>
    <string name="app_name">Study_Work</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dark_theme">Темная тема</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/?from=profile_overview</string>
    <string name="support_email">anastasiasizonenkoo@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась.Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="retry">Обновить</string>

</resources>