<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/activity_main"
    tools:context=".MainActivity">

    <TextView
        style="@style/text_main"
        android:text="@string/playlist_maker"/>

    <Button
        android:id="@+id/search_btb"
        style="@style/button_main"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24">
    </Button>

    <Button
        android:id="@+id/library_btb"
        style="@style/button_main"
        android:layout_marginTop="16dp"
        android:text="@string/library"
        app:icon="@drawable/ic_library_24">

    </Button>

    <Button
        android:id="@+id/settings_btb"
        style="@style/button_main"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24">

    </Button>

</LinearLayout>