<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/activity_settings"
    android:theme="@style/Base.Theme.Study_Work"
    android:id="@+id/settings_activity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon ="@drawable/ic_button_back_24"
        app:titleTextAppearance="@style/content"
        app:contentInsetStartWithNavigation="12dp"
        android:fontFamily = "@font/ys_display_medium"
        app:title="@string/settings">

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/SettingsSwitchStyle"
        android:text="@string/dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_share_app"
        style="@style/SettingsMaterialTextView"
        android:text="@string/share_app"
        android:drawableEnd="@drawable/ic_share_24">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_write_support"
        style="@style/SettingsMaterialTextView"
        android:text="@string/write_support"
        android:drawableEnd="@drawable/ic_support_24">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_user_agreement"
        style="@style/SettingsMaterialTextView"
        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_arrow_forward_24">
    </com.google.android.material.textview.MaterialTextView>

</LinearLayout>